--- a/.isort.cfg
+++ b/.isort.cfg
@@ -6,5 +6,5 @@ sort_relative_in_force_sorted_sections=False
 sections=FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
 no_lines_before=FIRSTPARTY
 force_sort_within_sections = false
-known_third_party = brand_tools, budgets, breakout_gcr_pl_mapping, breakout_schemas, config, config_utils, config_tests, config_data_quality_validation, dotenv, concur_schemas, ap_vendor_split_hc_us
-known_first_party = dotenv, test_tools
+known_third_party = brand_tools, budgets, breakout_gcr_pl_mapping, breakout_schemas, config, config_utils, config_tests, config_data_quality_validation, concur_schemas, ap_vendor_split_hc_us
+known_first_party = test_tools
