add s3 tools and tests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Data_Tool_Pack_Py"
 requires-python = ">=3.10,<3.11"
 dependencies = [
     "black>=24.10.0",
+    "boto3>=1.37.30",
     "databricks-cli>=0.18.0",
     "databricks-sql-connector>=3.7.1",
     "datetime>=5.5",
