--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "numpy>=2.2.1",
     "openpyxl>=3.1.5",
     "pandas>=2.2.3",
+    "psycopg2-binary>=2.9.10",
     "pyarrow>=18.1.0",
     "pydrive>=1.3.1",
     "pygsheets>=2.0.6",
